Fix ViewHelpers namespaces

--- a/NView.ViewHelpers.Mac/NView.ViewHelpers.Mac.csproj
+++ b/NView.ViewHelpers.Mac/NView.ViewHelpers.Mac.csproj
@@ -6,7 +6,7 @@
     <ProjectTypeGuids>{A3F8F2AB-B479-4A4A-A458-A89E7DC349F1};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <ProjectGuid>{BA84133A-063C-4DFC-BE2B-6A0DB8206253}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>NView.ViewHelpers.Mac</RootNamespace>
+    <RootNamespace>NView</RootNamespace>
     <MonoMacResourcePrefix>Resources</MonoMacResourcePrefix>
     <AssemblyName>NView.ViewHelpers.Mac</AssemblyName>
     <TargetFrameworkIdentifier>Xamarin.Mac</TargetFrameworkIdentifier>
