--- a/NView.ViewHelpers.iOS/NView.ViewHelpers.iOS.csproj
+++ b/NView.ViewHelpers.iOS/NView.ViewHelpers.iOS.csproj
@@ -6,7 +6,7 @@
     <ProjectTypeGuids>{FEACFBD2-3405-455C-9665-78FE426C6842};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <ProjectGuid>{2B085BFE-284D-42CC-8B93-751C9C251A06}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>NView.ViewHelpers.iOS</RootNamespace>
+    <RootNamespace>NView</RootNamespace>
     <IPhoneResourcePrefix>Resources</IPhoneResourcePrefix>
     <AssemblyName>NView.ViewHelpers.iOS</AssemblyName>
   </PropertyGroup>
