--- a/NView.ViewHelpers.Android/NView.ViewHelpers.Android.csproj
+++ b/NView.ViewHelpers.Android/NView.ViewHelpers.Android.csproj
@@ -6,7 +6,7 @@
     <ProjectTypeGuids>{EFBA0AD7-5A72-4C68-AF49-83D382785DCF};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <ProjectGuid>{8A7E6C1C-BDAC-409A-A794-6742E062BA69}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>NView.ViewHelpers.Android</RootNamespace>
+    <RootNamespace>NView</RootNamespace>
     <MonoAndroidAssetsPrefix>Assets</MonoAndroidAssetsPrefix>
     <MonoAndroidResourcePrefix>Resources</MonoAndroidResourcePrefix>
     <AndroidResgenClass>Resource</AndroidResgenClass>
