Fix up outputs.
Update nuspec with mac in it as well.

--- a/NView.ViewHelpers.Android/NView.ViewHelpers.Android.csproj
+++ b/NView.ViewHelpers.Android/NView.ViewHelpers.Android.csproj
@@ -12,7 +12,7 @@
     <AndroidResgenClass>Resource</AndroidResgenClass>
     <AndroidResgenFile>Resources\Resource.designer.cs</AndroidResgenFile>
     <AndroidUseLatestPlatformSdk>True</AndroidUseLatestPlatformSdk>
-    <AssemblyName>NView.ViewHelpers.Android</AssemblyName>
+    <AssemblyName>NView.ViewHelpers</AssemblyName>
     <TargetFrameworkVersion>v5.0</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -35,7 +35,7 @@
     <AndroidUseSharedRuntime>false</AndroidUseSharedRuntime>
     <ConsolePause>false</ConsolePause>
     <DebugSymbols>true</DebugSymbols>
-    <DocumentationFile>bin\Release\NView.ViewHelpers.Android.xml</DocumentationFile>
+    <DocumentationFile>bin\Release\NView.ViewHelpers.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
