--- a/NView.nuspec
+++ b/NView.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
    <metadata minClientVersion="2.8.1">
        <id>NView</id>
-       <version>1.1.3</version>
+       <version>1.1.4</version>
        <title>NView</title>
        <authors>NView</authors>
        <owners>NView</owners>
@@ -10,10 +10,10 @@
        <projectUrl>https://github.com/NView</projectUrl>
        <requireLicenseAcceptance>false</requireLicenseAcceptance>
        <description>
-         NView is a cross platform user interface library for Xamarin.iOS and Xamarin.Android.
+         NView is a cross platform user interface library for Xamarin.iOS, Xamarin.Android, and Xamarin.Mac.
        </description>
-       <summary>NView is a cross platform user interface library for Xamarin.iOS and Xamarin.Android.</summary>
-       <tags>awesome, pcl, cross platform, xamarin, ios, android, ui, user interface, view</tags>
+       <summary>NView is a cross platform user interface library for Xamarin.iOS, Xamarin.Android, and Xamarin.Mac.</summary>
+       <tags>awesome, pcl, cross platform, xamarin, ios, android, mac, ui, user interface, view</tags>
        <dependencies>
        </dependencies>
    </metadata>
