--- a/NView.nuspec
+++ b/NView.nuspec
@@ -23,26 +23,26 @@
 		<file src="NView/bin/Release/NView.xml" target="lib\portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10+Xamarin.Mac20\NView.xml" />
 		<file src="NView/bin/Release/NView.dll.mdb" target="lib\portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10+Xamarin.Mac20\NView.dll.mdb" />
 		
-		<!--Mac ViewHelpers-->
-		<file src="NView.ViewHelpers.Mac/bin/Release/NView.ViewHelpers.Mac.dll" target="lib\Xamarin.Mac20\NView.ViewHelpers.dll" />
-		<file src="NView.ViewHelpers.Mac/bin/Release/NView.ViewHelpers.Mac.xml" target="lib\Xamarin.Mac20\NView.ViewHelpers.xml" />
-		<file src="NView.ViewHelpers.Mac/bin/Release/NView.ViewHelpers.Mac.dll.mdb" target="lib\Xamarin.Mac20\NView.ViewHelpers.dll.mdb" />
+		<!--Mac-->
+		<file src="NView.ViewHelpers.Mac/bin/Release/NView.ViewHelpers.dll" target="lib\Xamarin.Mac20\NView.ViewHelpers.dll" />
+		<file src="NView.ViewHelpers.Mac/bin/Release/NView.ViewHelpers.xml" target="lib\Xamarin.Mac20\NView.ViewHelpers.xml" />
+		<file src="NView.ViewHelpers.Mac/bin/Release/NView.ViewHelpers.dll.mdb" target="lib\Xamarin.Mac20\NView.ViewHelpers.dll.mdb" />
 		<file src="NView/bin/Release/NView.dll" target="lib\Xamarin.Mac20\NView.dll" />
 		<file src="NView/bin/Release/NView.xml" target="lib\Xamarin.Mac20\NView.xml" />
 		<file src="NView/bin/Release/NView.dll.mdb" target="lib\Xamarin.Mac20\NView.dll.mdb" />
 		
-		<!--iOS ViewHelpers-->
-		<file src="NView.ViewHelpers.iOS/bin/Release/NView.ViewHelpers.iOS.dll" target="lib\Xamarin.iOS10\NView.ViewHelpers.dll" />
-		<file src="NView.ViewHelpers.iOS/bin/Release/NView.ViewHelpers.iOS.xml" target="lib\Xamarin.iOS10\NView.ViewHelpers.xml" />
-		<file src="NView.ViewHelpers.iOS/bin/Release/NView.ViewHelpers.iOS.dll.mdb" target="lib\Xamarin.iOS10\NView.ViewHelpers.dll.mdb" />
+		<!--iOS-->
+		<file src="NView.ViewHelpers.iOS/bin/Release/NView.ViewHelpers.dll" target="lib\Xamarin.iOS10\NView.ViewHelpers.dll" />
+		<file src="NView.ViewHelpers.iOS/bin/Release/NView.ViewHelpers.xml" target="lib\Xamarin.iOS10\NView.ViewHelpers.xml" />
+		<file src="NView.ViewHelpers.iOS/bin/Release/NView.ViewHelpers.dll.mdb" target="lib\Xamarin.iOS10\NView.ViewHelpers.dll.mdb" />
 		<file src="NView/bin/Release/NView.dll" target="lib\Xamarin.iOS10\NView.dll" />
 		<file src="NView/bin/Release/NView.xml" target="lib\Xamarin.iOS10\NView.xml" />
 		<file src="NView/bin/Release/NView.dll.mdb" target="lib\Xamarin.iOS10\NView.dll.mdb" />
 		
-		<!--Android ViewHelpers-->
-		<file src="NView.ViewHelpers.Android/bin/Release/NView.ViewHelpers.Android.dll" target="lib\MonoAndroid10\NView.ViewHelpers.dll" />
-		<file src="NView.ViewHelpers.Android/bin/Release/NView.ViewHelpers.Android.xml" target="lib\MonoAndroid10\NView.ViewHelpers.xml" />
-		<file src="NView.ViewHelpers.Android/bin/Release/NView.ViewHelpers.Android.dll.mdb" target="lib\MonoAndroid10\NView.ViewHelpers.dll.mdb" />
+		<!--Android-->
+		<file src="NView.ViewHelpers.Android/bin/Release/NView.ViewHelpers.dll" target="lib\MonoAndroid10\NView.ViewHelpers.dll" />
+		<file src="NView.ViewHelpers.Android/bin/Release/NView.ViewHelpers.xml" target="lib\MonoAndroid10\NView.ViewHelpers.xml" />
+		<file src="NView.ViewHelpers.Android/bin/Release/NView.ViewHelpers.dll.mdb" target="lib\MonoAndroid10\NView.ViewHelpers.dll.mdb" />
    		<file src="NView/bin/Release/NView.dll" target="lib\MonoAndroid10\NView.dll" />
 		<file src="NView/bin/Release/NView.xml" target="lib\MonoAndroid10\NView.xml" />
 		<file src="NView/bin/Release/NView.dll.mdb" target="lib\MonoAndroid10\NView.dll.mdb" />
